src/test/resources/validation/error/queryIncorrectPagination/schema.graphqls
type Query {
  person(
    eierInstitusjonsnummer: String! @column(name: "INSTITUSJONSNR_EIER"),
    first: Int = 100,
    #after: String, #missing after
  ): QueryPersonConnection @connection(for: "PersonProfil")
}

type PersonProfil @table(name: "PERSON") {
  id: ID!
  fornavn: String!
}
